# rekordbox-xml-editor

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.base.json  vite.config.ts
apps/electron/: package.json  tsconfig.json
apps/electron/src/main/: index.ts
apps/electron/src/main/ipc/: libraryIpc.ts
apps/electron/src/main/services/: fileService.ts
apps/electron/src/preload/: index.ts
apps/electron/src/renderer/: index.html
apps/electron/src/renderer/src/: App.tsx  global.d.ts  main.tsx
apps/tauri/: index.html  package.json  vite.config.ts
apps/tauri/src/: App.tsx
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/src-tauri/src/: lib.rs  main.rs
apps/tauri/src-tauri/src/commands/: library_commands.rs
apps/tauri/src-tauri/src/services/: library_service.rs  mod.rs
apps/tauri/src-tauri/src/xml/: parser.rs  serializer.rs  validation.rs
fixtures/: sample-library.xml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  main.rs
src-tauri/src/commands/: library_commands.rs  mod.rs
src-tauri/src/models/: library.rs  mod.rs
src-tauri/src/services/: backup_service.rs  library_service.rs
src-tauri/src/xml/: mod.rs  parser.rs
src/components/: AppLayout.tsx  BulkEditModal.tsx  MetadataEditor.tsx  PlaylistSidebar.tsx  Toolbar.tsx  TrackTable.tsx
src/features/playlists/: playlistTree.ts
src/features/tracks/: bulkEdit.ts
src/lib/: filtering.ts  tauriApi.ts
src/types/: library.ts
